# pymaap

./: .gitignore  CHANGELOG.md  README.md  README_release.md  pyproject.toml  release.sh  requirements.txt
.github/workflows/: test.yml
docs/: releasing.md
docs-site/: mkdocs.yml
docs-site/docs/: quickstart.md  releasing.md
pymaap/: __init__.py  analysis.py  logging_backend.py  logging_setup.py  monitoring.py  multiprocessing_support.py
reports/pymaap/: class_index.html  function_index.html  index.html  status.json  z_da6a4847b7505ca7___init___py.html  z_da6a4847b7505ca7_analysis_py.html  z_da6a4847b7505ca7_logging_backend_py.html  z_da6a4847b7505ca7_logging_setup_py.html  z_da6a4847b7505ca7_monitoring_py.html  z_da6a4847b7505ca7_multiprocessing_support_py.html
tests/: test_analysis.py  test_monitoring.py
tutorial/: 01_single_process.py  02_multiprocessing_pool.py  03_single_then_multiprocessing.py
