[build-system]
requires = ["setuptools>=61", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "pymaap"
dynamic = ["version"]
description = "PyMAAP: Python Monitoring and Analysis Package"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Samuel Alter", email = "s.r.alter@icloud.com"}]
license = "MIT"
dependencies = [
  "geopandas>=1.0.0",
  "pandas>=2.0",
  "psutil>=7.0.0",
  "pyarrow>=19.0",
  "matplotlib>=3.10",
  "seaborn>=0.13",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "pytest-html",
  "sphinx",
  "twine",
  "build",
  "setuptools-scm",
  "git-cliff",
]

[tool.setuptools.packages.find]
include = ["pymaap*"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:.*vert.*will be deprecated.*:PendingDeprecationWarning"
]

[tool.setuptools_scm]
local_scheme = "no-local-version"
version_scheme = "post-release"

[project.urls]
Homepage = "https://github.com/sralter/pymaap"
Documentation = "https://sralter.github.io/pymaap/"